--- a/.github/workflows/boost-dev.yml
+++ b/.github/workflows/boost-dev.yml
@@ -53,3 +53,16 @@ jobs:
           registry_module: boostsecurityio/codeql
         env:
           CODEQL_LANGUAGE: javascript
+
+  semgrep:
+    name: Semgrep
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Semgrep
+        uses: boostsecurityio/boostsec-scanner-github@v4
+        with:
+          api_endpoint: https://api.dev.boostsec.io
+          api_token: ${{ secrets.BOOST_API_TOKEN }}
+          registry_module: boostsecurityio/semgrep
